test runs-on 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
 
 
   test: # 전체 테스트 실행
+    runs-on: ubuntu-22.04
     steps:
       - name: Check out the codes
         uses: actions/checkout@v2
