--- a/meetifyr/pyproject.toml
+++ b/meetifyr/pyproject.toml
@@ -21,6 +21,13 @@ fastapi = {extras = ["standard"], version = "^0.128.0"}
 [tool.poetry.group.dev.dependencies]
 uvicorn = "^0.40.0"
 orjson = "^3.11.5"
+black = "^25.12.0"
+mypy = "^1.19.1"
+coverage = "^7.13.1"
+ruff = "^0.14.10"
+pytest = "^9.0.2"
+pydantic = "^2.12.5"
+pytest-asyncio = "^1.3.0"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
