--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,50 +2,46 @@ name: CI
 
 on:
   push:
-  # workflow_dispatch: 깃허브 페이지에서 버튼을 눌러 실행할 때마다
-  # pull_request: PR 마다
+  workflow_dispatch: # 수동 실행 활성화
 
 jobs:
-  static-analysis: # mypy, black, ruff 등 정적 분석
-    runs-on: ubuntu-22.04 # 실제 프로덕션에서는 모든 버전을 고정하는 것이 좋다.
-    #예기치 못한 버전업 환경에서의 동작을 방지
-
+  static-analysis:
+    runs-on: ubuntu-22.04
     steps:
       - name: Check out the codes
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4 # v2 -> v4 업데이트
 
       - name: Setup python environment
         id: setup-python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5 # v2 -> v5 업데이트
         with:
           python-version: "3.13"
 
       - name: Cache Poetry
         id: cache-poetry
-        uses: actions/cache@v2
+        uses: actions/cache@v4 # v2 -> v4 업데이트
         with:
           key: poetry-1.8.5
           path: ~/.local/
 
       - name: Install Poetry
         if: steps.cache-poetry.outputs.cache-hit != 'true'
-        run: curl -sSL https://install.python-poetry.org | python3 - --version 1.8.5
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 - --version 1.8.5
 
       - name: Register Poetry bin
-        run: echo "${HOME}/.poetry/bin" >> $GITHUB_PATH
-
+        run: echo "${HOME}/.local/bin" >> $GITHUB_PATH # 설치 경로 수정 (install-poetry 방식 기준)
 
       - name: Cache dependencies
         id: cache-venv
-        uses: actions/cache@v2
+        uses: actions/cache@v4 # v2 -> v4 업데이트
         with:
-          # 파이썬 버전이 바뀌었을 때, lock 파일이나 toml 파일이 바뀌었을때 종속성을 재설치합니다.
-          # 바뀐 것이 없는 경우에는 캐싱된 종속성을 사용합니다.
           key: python-${{ steps.setup-python.outputs.python-version }}-poetry-lock-${{ hashFiles('poetry.lock') }}-toml-${{ hashFiles('pyproject.toml') }}-poetry-1.8.5
           path: /home/runner/.cache/pypoetry/virtualenvs/
 
       - name: Install dependencies
-        if: steps.cache-poetry.outputs.cache-hit != 'true'      
+        # cache-venv가 히트되지 않았을 때 설치하도록 수정 (기존 코드는 cache-poetry 기준이었음)
+        if: steps.cache-venv.outputs.cache-hit != 'true'
         run: poetry install --no-root
 
       - name: Run Black
@@ -59,23 +55,22 @@ jobs:
       - name: Run Mypy
         run: poetry run mypy .
 
-
-
-  test: # 전체 테스트 실행
+  test:
+    needs: static-analysis # 정적 분석 성공 후에만 테스트 실행 (권장)
     runs-on: ubuntu-22.04
     steps:
       - name: Check out the codes
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup python environment
         id: setup-python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: "3.13"
 
       - name: Cache Poetry
         id: cache-poetry
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           key: poetry-1.8.5
           path: ~/.local/
@@ -85,24 +80,20 @@ jobs:
         run: curl -sSL https://install.python-poetry.org | python3 - --version 1.8.5
 
       - name: Register Poetry bin
-        run: echo "${HOME}/.poetry/bin" >> $GITHUB_PATH
-
+        run: echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
       - name: Cache dependencies
         id: cache-venv
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
-          # 파이썬 버전이 바뀌었을 때, lock 파일이나 toml 파일이 바뀌었을때 종속성을 재설치합니다.
-          # 바뀐 것이 없는 경우에는 캐싱된 종속성을 사용합니다.
           key: python-${{ steps.setup-python.outputs.python-version }}-poetry-lock-${{ hashFiles('poetry.lock') }}-toml-${{ hashFiles('pyproject.toml') }}-poetry-1.8.5
           path: /home/runner/.cache/pypoetry/virtualenvs/
 
       - name: Install dependencies
-        if: steps.cache-poetry.outputs.cache-hit != 'true'      
+        if: steps.cache-venv.outputs.cache-hit != 'true'
         run: poetry install --no-root
 
       - name: Run tests
         run: |
           poetry run coverage run -m pytest .
           poetry run coverage report -m
-
