--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,62 +2,16 @@ name: CI
 
 on:
   push:
-  workflow_dispatch: # 수동 실행 활성화
+  workflow_dispatch:
 
 jobs:
   static-analysis:
     runs-on: ubuntu-22.04
-    steps:
-      - name: Check out the codes
-        uses: actions/checkout@v4 # v2 -> v4 업데이트
+    # 모든 실행 단계를 meetifyr 폴더 안에서 수행하도록 설정
+    defaults:
+      run:
+        working-directory: ./meetifyr
 
-      - name: Setup python environment
-        id: setup-python
-        uses: actions/setup-python@v5 # v2 -> v5 업데이트
-        with:
-          python-version: "3.13"
-
-      - name: Cache Poetry
-        id: cache-poetry
-        uses: actions/cache@v4 # v2 -> v4 업데이트
-        with:
-          key: poetry-1.8.5
-          path: ~/.local/
-
-      - name: Install Poetry
-        if: steps.cache-poetry.outputs.cache-hit != 'true'
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 - --version 1.8.5
-
-      - name: Register Poetry bin
-        run: echo "${HOME}/.local/bin" >> $GITHUB_PATH # 설치 경로 수정 (install-poetry 방식 기준)
-
-      - name: Cache dependencies
-        id: cache-venv
-        uses: actions/cache@v4 # v2 -> v4 업데이트
-        with:
-          key: python-${{ steps.setup-python.outputs.python-version }}-poetry-lock-${{ hashFiles('poetry.lock') }}-toml-${{ hashFiles('pyproject.toml') }}-poetry-1.8.5
-          path: /home/runner/.cache/pypoetry/virtualenvs/
-
-      - name: Install dependencies
-        # cache-venv가 히트되지 않았을 때 설치하도록 수정 (기존 코드는 cache-poetry 기준이었음)
-        if: steps.cache-venv.outputs.cache-hit != 'true'
-        run: poetry install --no-root
-
-      - name: Run Black
-        run: poetry run black . --check
-
-      - name: Run ruff
-        run: |
-          poetry run ruff check --select I
-          poetry run ruff check
-
-      - name: Run Mypy
-        run: poetry run mypy .
-
-  test:
-    needs: static-analysis # 정적 분석 성공 후에만 테스트 실행 (권장)
-    runs-on: ubuntu-22.04
     steps:
       - name: Check out the codes
         uses: actions/checkout@v4
@@ -86,7 +40,61 @@ jobs:
         id: cache-venv
         uses: actions/cache@v4
         with:
-          key: python-${{ steps.setup-python.outputs.python-version }}-poetry-lock-${{ hashFiles('poetry.lock') }}-toml-${{ hashFiles('pyproject.toml') }}-poetry-1.8.5
+          # working-directory 설정 덕분에 ./meetifyr/poetry.lock 파일을 자동으로 찾습니다.
+          key: python-${{ steps.setup-python.outputs.python-version }}-poetry-lock-${{ hashFiles('meetifyr/poetry.lock') }}-toml-${{ hashFiles('meetifyr/pyproject.toml') }}-poetry-1.8.5
+          path: /home/runner/.cache/pypoetry/virtualenvs/
+
+      - name: Install dependencies
+        if: steps.cache-venv.outputs.cache-hit != 'true'
+        run: poetry install --no-root
+
+      - name: Run Black
+        run: poetry run black . --check
+
+      - name: Run ruff
+        run: |
+          poetry run ruff check --select I
+          poetry run ruff check
+
+      - name: Run Mypy
+        run: poetry run mypy .
+
+  test:
+    needs: static-analysis
+    runs-on: ubuntu-22.04
+    defaults:
+      run:
+        working-directory: ./meetifyr
+
+    steps:
+      - name: Check out the codes
+        uses: actions/checkout@v4
+
+      - name: Setup python environment
+        id: setup-python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
+      - name: Cache Poetry
+        id: cache-poetry
+        uses: actions/cache@v4
+        with:
+          key: poetry-1.8.5
+          path: ~/.local/
+
+      - name: Install Poetry
+        if: steps.cache-poetry.outputs.cache-hit != 'true'
+        run: curl -sSL https://install.python-poetry.org | python3 - --version 1.8.5
+
+      - name: Register Poetry bin
+        run: echo "${HOME}/.local/bin" >> $GITHUB_PATH
+
+      - name: Cache dependencies
+        id: cache-venv
+        uses: actions/cache@v4
+        with:
+          key: python-${{ steps.setup-python.outputs.python-version }}-poetry-lock-${{ hashFiles('meetifyr/poetry.lock') }}-toml-${{ hashFiles('meetifyr/pyproject.toml') }}-poetry-1.8.5
           path: /home/runner/.cache/pypoetry/virtualenvs/
 
       - name: Install dependencies
