--- a/meetifyr/pyproject.toml
+++ b/meetifyr/pyproject.toml
@@ -36,6 +36,7 @@ pytest-asyncio = "^1.3.0"
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
+filterwarnings = ["ignore::DeprecationWarning"]
 
 [tool.coverage.run]
 omit = ["*/test_*.py"]
@@ -59,3 +60,7 @@ src_folder = "./."
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+
+
